[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/fonts/ui_main_menu_title_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/main_menu/main_menu.gd" type="Script" id=3]
[ext_resource path="res://ui/main_menu/glorious_main_menu.jpg" type="Texture" id=4]

[node name="MainMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplitContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="MarginContainer" parent="SplitContainer"]
margin_right = 1920.0
margin_bottom = 1030.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 150
custom_constants/margin_bottom = 100

[node name="MenuLayout" type="VBoxContainer" parent="SplitContainer/CenterContainer"]
margin_left = 150.0
margin_top = 354.0
margin_right = 548.0
margin_bottom = 575.0
size_flags_horizontal = 0
size_flags_vertical = 4
custom_constants/separation = 50

[node name="Title" type="Label" parent="SplitContainer/CenterContainer/MenuLayout"]
margin_right = 398.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 1 )
text = "Strongerholder"

[node name="MenuButtons" type="VBoxContainer" parent="SplitContainer/CenterContainer/MenuLayout"]
margin_left = 157.0
margin_top = 137.0
margin_right = 241.0
margin_bottom = 221.0
size_flags_horizontal = 4
custom_constants/separation = 12

[node name="NewGame" type="Button" parent="SplitContainer/CenterContainer/MenuLayout/MenuButtons"]
margin_right = 84.0
margin_bottom = 20.0
text = "New Game"

[node name="Load" type="Button" parent="SplitContainer/CenterContainer/MenuLayout/MenuButtons"]
margin_top = 32.0
margin_right = 84.0
margin_bottom = 52.0
text = "Load Game"

[node name="ClassEditor" type="Button" parent="SplitContainer/CenterContainer/MenuLayout/MenuButtons"]
visible = false
margin_top = 48.0
margin_right = 86.0
margin_bottom = 68.0
text = "Class Editor"

[node name="Tests" type="Button" parent="SplitContainer/CenterContainer/MenuLayout/MenuButtons"]
visible = false
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Tests"

[node name="Quit" type="Button" parent="SplitContainer/CenterContainer/MenuLayout/MenuButtons"]
margin_top = 64.0
margin_right = 84.0
margin_bottom = 84.0
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="SplitContainer"]
margin_top = 1034.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 16
custom_constants/margin_left = 20
custom_constants/margin_bottom = 16

[node name="Version" type="Label" parent="SplitContainer/MarginContainer"]
margin_left = 1817.0
margin_top = 16.0
margin_right = 1900.0
margin_bottom = 30.0
size_flags_horizontal = 8
text = "version 0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="SplitContainer/CenterContainer/MenuLayout/MenuButtons/NewGame" to="." method="_new_game"]
[connection signal="pressed" from="SplitContainer/CenterContainer/MenuLayout/MenuButtons/Load" to="." method="_load_game"]
[connection signal="pressed" from="SplitContainer/CenterContainer/MenuLayout/MenuButtons/ClassEditor" to="." method="_open_class_editor"]
[connection signal="pressed" from="SplitContainer/CenterContainer/MenuLayout/MenuButtons/Tests" to="." method="_open_tests"]
[connection signal="pressed" from="SplitContainer/CenterContainer/MenuLayout/MenuButtons/Quit" to="." method="_quit_game"]
